# masterbot-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  TESTING_CHECKLIST.md  deploy.sh  docker-compose.miniapp.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.sh
.claude/commands/: backfill.md  deploy.md  logs.md  migrate.md  status.md  test.md
.github/workflows/: deploy.yml
bablo_service/: Dockerfile  config.py  main.py  requirements.txt
bablo_service/api/: dependencies.py  router.py
bablo_service/core/: parser.py
bablo_service/models/: __init__.py  bablo.py
bablo_service/scripts/: debug_messages.py  import_history.py
bablo_service/services/: __init__.py  analytics_service.py  notification_service.py  (+2 more)
impulse_service/: Dockerfile  config.py  main.py  requirements.txt
master_bot/: Dockerfile  config.py  main.py  requirements.txt
miniapp_frontend/: .gitignore  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
miniapp_gateway/: Dockerfile  README.md  __init__.py  config.py  database.py  main.py  requirements.txt
scripts/: backup_db.sh  dev_miniapp.sh  generate_session.py  init_db.py  migrate_from_old_bot.py  register_service.py  restore_db.sh  setup_ssh.sh  test_bablo_notification.py  test_notification.py  test_telegram_connection.py
service_template/: Dockerfile  README.md  main.py  requirements.txt
shared/: __init__.py  constants.py
strong_service/: Dockerfile  backfill_signals.py  config.py  main.py  requirements.txt
tests/: __init__.py  conftest.py
(+225 files in other folders)
